Refactor: Change syntaxes for java 17